Pentomino rotations and positioning  is working as well as a simple GUI with Raphael for visualizing the pieces in the browser

--- a/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/index.html
@@ -5,11 +5,18 @@
     <meta charset="utf-8" />
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="Scripts/jquery-2.1.1.js"></script>
     <script src="Scripts/raphael.js"></script>
     <script src="app.js"></script>
+
 </head>
 <body>
     <h1>Testing Raphael and Typescript</h1>
     <div id="content"></div>
+    <button id="rotate-button" >Rotate</button>
+    <button id="up-button">^</button>
+    <button id="down-button">v</button>
+    <button id="left-button"><</button>
+    <button id="right-button">></button>
 </body>
 </html>
