--- a/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="Scripts/jquery-2.1.1.js"></script>
     <script src="Scripts/raphael.js"></script>
+    <script src="Dlx.js"></script>
     <script src="app.js"></script>
 
 </head>
