Added all pentomino figures with different colors

--- a/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/index.html
@@ -19,5 +19,6 @@
     <button id="down-button">v</button>
     <button id="left-button"><</button>
     <button id="right-button">></button>
+    <select id="figure-select"></select>
 </body>
 </html>
